fixing some overflow issues for the info of some cards

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ footer div:last-child{padding-bottom:0}
 .filtersContainer{margin-left:1rem; display:flex; flex-direction:column}
 .filtersTitle{margin-bottom:.5rem}
 .filterButton{border:solid var(--gray) 2px; background-color:#fff; border-radius:25px; padding-right:16px; margin-right:10px; margin-bottom:1em; cursor:pointer}
-.filterIcon{padding:16px; background-color:var(--lightblue); border-radius:25px; margin-right:8px; color:var(--blue)}
+.filterIcon{padding:16px; background-color:var(--lightblue); border-radius:25px; margin-right:8px; color:var(--blue); transition:all .3ms linear}
 
 .infoText{margin-top:1.5rem}
 .infoIcon{background:var(--blue); color:white; border-radius:50px; margin-right:5px}
@@ -78,14 +78,14 @@ footer div:last-child{padding-bottom:0}
 .mostPopular{width:100%}
 .cardsContainer_mostPopular{display:flex; flex-direction:column; ; justify-content:space-around}
 .card_info{display:flex; flex-direction:column; justify-content:space-between; font-size:.8rem; margin-top:1rem}
-.mostPopular_card{height:12vh; /*width:90vw;*/ display:flex; margin-bottom:1rem; background-color:white; padding-top:.2rem; padding-left:.2rem; padding-bottom:.2rem; padding-right:1rem}
+.mostPopular_card{height:130px; /*width:90vw;*/ display:flex; margin-bottom:1rem; background-color:white; padding-top:.2rem; padding-left:.2rem; padding-bottom:.2rem; padding-right:1rem}
 .mostPopular_card_img{width:35%; margin-right:1rem; height:auto; object-fit:cover; border-top-left-radius:20px; border-bottom-left-radius:20px}
 
 .accomodations{width:100%}
 .cardsContainer_accomodations{display:flex; flex-direction:column; ; justify-content:space-around}
-.accomodations_card{height:20vh; width:100%; display:flex; flex-direction:column; margin-bottom:1rem; background-color:white; padding-top:.2rem; padding-left:.2rem; padding-bottom:3rem; padding-right:.2rem}
-.accomodations_card_img{height:65%; width:100%; object-fit:cover; border-top-left-radius:20px; border-top-right-radius:20px}
-.accomodations_card_info{margin-left:1rem; line-height:1.3rem}
+.accomodations_card{height:200px; width:100%; display:flex; flex-direction:column; margin-bottom:1rem; background-color:white; padding-top:.2rem; padding-left:.2rem; padding-bottom:3rem; padding-right:.2rem}
+.accomodations_card_img{height:85%; width:100%; object-fit:cover; border-top-left-radius:20px; border-top-right-radius:20px}
+.accomodations_card_info{margin-left:1rem; line-height:1.3rem; margin-top:.2rem}
 
 .cardsContainer_activities{
   padding:1rem;
@@ -121,7 +121,7 @@ footer div:last-child{padding-bottom:0}
 
 .activitiesCardH3{font-size:1rem; font-weight:bold; padding:.5rem; border-radius:20px}
 
-
+/*TABLETS*/
 @media screen and (min-width:400px){
   .searchText{display:block; font-family:'Raleway', sans-serif; font-size:1rem; font-weight:bold; cursor:pointer; border:none; border-top-right-radius:15px; border-bottom-right-radius:15px; background-color:var(--blue); padding:16px; color:white; position:absolute; right:0; top:0}
   .searchIcon{display:none}
@@ -150,11 +150,6 @@ footer div:last-child{padding-bottom:0}
 @media screen and (min-width:640px){
   .cardsContainer_mostPopular{flex-direction:row; flex-wrap:wrap; justify-content:flex-start}
   .mostPopular_card{height:116px; width:288px; margin-right:10px}
-  /*.cardsContainer_activities{
-    display:grid;
-    grid-template-columns:repeat(2, 1fr);
-    grid-gap:1em
-  }*/
 }
 
 @media screen and (min-width:650px){
@@ -169,6 +164,7 @@ footer div:last-child{padding-bottom:0}
 
 @media screen and (min-width:662px){
   .accomodations_card{width:200px}
+  .accomodations_card_info{margin-left:1rem; line-height:1rem; margin-top:.2rem}
 }
 
 @media screen and (min-width:750px){
@@ -196,12 +192,8 @@ footer div:last-child{padding-bottom:0}
   .inputBox{align-self:flex-start; margin-left:10px}
 }
 
-/*@media screen and (min-width:960px){
-  .cardsContainer_activities{
-    grid-template-columns:repeat(3, 1fr)
-  }
-}*/
 
+/*DESKTOP*/
 @media screen and (min-width:1010px){
   .sectionsFlex{display:flex; justify-content:space-around; flex-direction:row}
   .mostPopular{width:32vw; order:1; border-radius:20px}
@@ -218,6 +210,9 @@ footer div:last-child{padding-bottom:0}
  .activitiesCard2{min-height:250px; margin-bottom:1.5rem}
  .activitiesCard5{margin-bottom:1.5rem}
  .activitiesCard5, .activitiesCard6{flex-grow:1}
+
+ .filterIcon{padding:16px; background-color:var(--lightblue); color:var(--blue); transition:all .1s ease-in}
+ .filterIcon:hover{padding:15.2px; background-color:var(--gray); border:1px solid rgb(184, 182, 182); border-radius:25px; margin-right:8px; color:rgb(102, 102, 102)}
 }
 
 
